refactored and fixed bugs of the storage engine unittest\ modefied the readme file\ added the datetime library to the requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ json # for JSON data handling
 unittest # for unit testing
 cmd # for CLI development
 uuid # for objects unique ids
+datetime # for date and time of creation and update on entities
